FullSb1-27-apr-15/src/objects/Routing_Table__c.object
<CustomObject>
    <fields>
        <fullName>Age_Range__c</fullName>
        <label>Age Range</label>
        <picklist>
            <picklistValues>
                <fullName>18-22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29-35</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Routing Rules</relationshipLabel>
        <relationshipName>Routing_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Postal_Code__c</fullName>
        <formula>&apos;For leads &apos; &amp; IF(Lower_Bound__c == Upper_Bound__c, &apos;in exactly Zip/Postal Code &quot;&apos; &amp; Lower_Bound__c &amp; &apos;&quot;&apos;, &apos;with a Zip/Postal Code between &quot;&apos; &amp; Lower_Bound__c &amp; &apos;&quot; and &quot;&apos; &amp; Upper_Bound__c &amp; &apos;&quot;&apos;) &amp; IF(ISBLANK(Lead_Source__c), &apos;&apos;, &apos;, and a Lead Source of &quot;&apos; &amp; Lead_Source__c &amp; &apos;&quot;&apos;) &amp; IF(ISBLANK(Lead_Status__c), &apos;&apos;, &apos;, and a Lead Status of &quot;&apos; &amp; Lead_Status__c &amp; &apos;&quot;&apos;) &amp; &apos;, route to &quot;&apos; &amp; Routed_To__c &amp; &apos;&quot; by &apos; &amp; TEXT(Routed_By__c) &amp; &apos;.&apos;</formula>
        <label>Description (Postal Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Proximity__c</fullName>
        <formula>&apos;For leads near latitude &quot;&apos; &amp; TEXT(Lat__c) &amp; &apos;&quot; and longitude &quot;&apos; &amp; TEXT(Lon__c) &amp; &apos;&quot;&apos; &amp; IF(ISBLANK(Lead_Source__c), &apos;&apos;, &apos;, and a Lead Source of &quot;&apos; &amp; Lead_Source__c &amp; &apos;&quot;&apos;) &amp; IF(ISBLANK(Lead_Status__c), &apos;&apos;, &apos;, and a Lead Status of &quot;&apos; &amp; Lead_Status__c &amp; &apos;&quot;&apos;) &amp; &apos;, route to &quot;&apos; &amp; Routed_To__c &amp; &apos;&quot; by &apos; &amp; TEXT(Routed_By__c) &amp; &apos;.&apos;</formula>
        <label>Description (Proximity)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_Recruiting__c</fullName>
        <formula>&apos;Error: Formula needs to be defined.&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description (Recruiting)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>CASE(Routing_Type__c, &apos;Proximity&apos;, Description_Proximity__c, &apos;Zip/Postal Code&apos;, Description_Postal_Code__c, &apos;Recruiting&apos;, Description_Recruiting__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Granularity_Postal_Code__c</fullName>
        <formula>LEN(Lower_Bound__c) + LEN(Upper_Bound__c) + IF(Lower_Bound__c == Upper_Bound__c, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Granularity (Postal Code)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granularity_Proximity__c</fullName>
        <formula>LEN(Lower_Bound__c) + LEN(Upper_Bound__c) + IF(Lower_Bound__c == Upper_Bound__c, 10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Granularity (Proximity)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granularity_Recruiting__c</fullName>
        <formula>IF(ISBLANK(TEXT(Region__c)), 0, 5) + 
IF(ISBLANK(TEXT(Country__c)), 0, 10) + 
IF(ISBLANK(State__c), 0, 15) + 
IF(ISBLANK(TEXT(Age_Range__c)), 0, 5) + 
IF(ISBLANK(TEXT(Work_Load__c)), 0, 5) + 
IF(ISBLANK(Department__c), 0, 10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Granularity (Recruiting)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granularity__c</fullName>
        <formula>CASE(Routing_Type__c, &apos;Proximity&apos;, Granularity_Proximity__c, &apos;Zip/Postal Code&apos;, Granularity_Postal_Code__c, &apos;Recruiting&apos;, Granularity_Recruiting__c, 0)</formula>
        <label>Granularity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Roule_Applied_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Last Roule Applied Date Contact</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_RuleApplied_Date_LEAD__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Last RuleApplied Date LEAD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lat__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lon__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lower_Bound__c</fullName>
        <label>Lower Bound</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching__c</fullName>
        <label>Matching</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Grouping__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Grouping?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority_Value__c</fullName>
        <formula>CASE(Priority__c, &apos;High&apos;, 100, &apos;Normal&apos;, 10, &apos;Low&apos;, 1, &apos;Medium&apos;,10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catch All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lat Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LON EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUZ EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Am BOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Am SFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routed_By__c</fullName>
        <label>Routed By</label>
        <picklist>
            <picklistValues>
                <fullName>Queue ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Queue Name</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Name</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Department ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Department Name</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routed_Records_LEAD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Routed Records LEAD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routed_Records__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Routed Records Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Routed_To__c</fullName>
        <label>Routed To</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Routing_Type__c</fullName>
        <label>Routing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Zip/Postal Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proximity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <label>Sub-Region</label>
        <picklist>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australasia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Uniqueness_ID__c</fullName>
        <label>Uniqueness ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Upper_Bound__c</fullName>
        <label>Upper Bound</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Load__c</fullName>
        <label>Work Load</label>
        <picklist>
            <picklistValues>
                <fullName>Did Not Respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive MBA Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part-time Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Undecided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Routing Rule</label>
    <listViews>
        <fullName>ALL_USA</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Country__c</columns>
        <columns>State__c</columns>
        <columns>Region__c</columns>
        <columns>Routed_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>United States</value>
        </filters>
        <label>ALL USA</label>
    </listViews>
    <listViews>
        <fullName>All_Canada</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Department__c</columns>
        <columns>State__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <columns>Routed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <label>All Canada</label>
    </listViews>
    <listViews>
        <fullName>All_MBA</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Granularity_Recruiting__c</columns>
        <columns>Routed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>MBA</value>
        </filters>
        <label>All MBA</label>
    </listViews>
    <listViews>
        <fullName>By_Priority_Catch_All</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Routed_By__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>Catch All</value>
        </filters>
        <label>By Priority - Catch All</label>
    </listViews>
    <listViews>
        <fullName>By_Priority_Low</fullName>
        <columns>Priority__c</columns>
        <columns>NAME</columns>
        <columns>Routed_By__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Lead_Source__c</columns>
        <columns>Lead_Status__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </filters>
        <label>By Priority - Low</label>
    </listViews>
    <listViews>
        <fullName>By_Priority_Normal</fullName>
        <columns>NAME</columns>
        <columns>Routed_To__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>Department__c</columns>
        <columns>Routed_By__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Priority__c</field>
            <operation>equals</operation>
            <value>Normal</value>
        </filters>
        <label>By Priority - Normal</label>
    </listViews>
    <listViews>
        <fullName>Charlotte</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <columns>State__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Routed_To__c</field>
            <operation>contains</operation>
            <value>charlotte.pandraud</value>
        </filters>
        <label>Charlotte</label>
    </listViews>
    <listViews>
        <fullName>Europe_Rules</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Department__c</columns>
        <columns>Priority__c</columns>
        <columns>Routed_To__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Europe</value>
        </filters>
        <label>Europe Rules</label>
    </listViews>
    <listViews>
        <fullName>Latin_America</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Department__c</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Lat Am</value>
        </filters>
        <label>Latin America</label>
    </listViews>
    <listViews>
        <fullName>MEA</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Department__c</columns>
        <columns>Routed_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <columns>Routed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>MEA</value>
        </filters>
        <label>MEA</label>
    </listViews>
    <listViews>
        <fullName>MIB_Routing_Rules</fullName>
        <columns>NAME</columns>
        <columns>Comment__c</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Department__c</columns>
        <columns>Routed_By__c</columns>
        <columns>Routed_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>MIB</value>
        </filters>
        <label>MIB Routing Rules</label>
    </listViews>
    <listViews>
        <fullName>Masters</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Country__c</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <columns>Routed_To__c</columns>
        <columns>State__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>contains</operation>
            <value>Masters</value>
        </filters>
        <label>Masters</label>
    </listViews>
    <listViews>
        <fullName>No_State_or_Province</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Region__c</columns>
        <columns>Priority__c</columns>
        <columns>Routed_To__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada,United States</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
        </filters>
        <label>No State or Province</label>
    </listViews>
    <listViews>
        <fullName>North_American_Default_Routes</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Country__c</columns>
        <columns>Priority__c</columns>
        <columns>State__c</columns>
        <columns>Region__c</columns>
        <columns>Routed_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Canada,United States</value>
        </filters>
        <filters>
            <field>State__c</field>
            <operation>equals</operation>
        </filters>
        <label>North American Default Routes</label>
    </listViews>
    <listViews>
        <fullName>Recruiting_Rules</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Department__c</columns>
        <columns>State__c</columns>
        <columns>Age_Range__c</columns>
        <columns>Work_Load__c</columns>
        <columns>Routed_By__c</columns>
        <columns>Routed_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Routing_Table__c.Recruiting</value>
        </filters>
        <filters>
            <field>Routed_By__c</field>
            <operation>notEqual</operation>
            <value>Department ID,Department Name</value>
        </filters>
        <label>Recruiting Rules</label>
    </listViews>
    <nameField>
        <displayFormat>Rule {0000}</displayFormat>
        <label>Rule #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routing Rules</pluralLabel>
    <recordTypes>
        <fullName>Postal_Code</fullName>
        <active>true</active>
        <label>Zip/Postal Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Proximity</fullName>
        <active>true</active>
        <label>Proximity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiting</fullName>
        <active>true</active>
        <label>Recruiting</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Required_Routed_By</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Routed_By__c))</errorConditionFormula>
        <errorDisplayField>Routed_By__c</errorDisplayField>
        <errorMessage>Required field missing: Routed By</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Routed_To</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Routed_To__c)</errorConditionFormula>
        <errorDisplayField>Routed_To__c</errorDisplayField>
        <errorMessage>Required field missing: Routed To</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Department_ID_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Routed_By__c, &apos;Department ID&apos;), NOT(ISBLANK(Routed_To__c)), LEN(Routed_To__c) != 15, LEN(Routed_To__c) != 18)</errorConditionFormula>
        <errorDisplayField>Routed_To__c</errorDisplayField>
        <errorMessage>When routing by Department ID, the routed to ID must be either exactly 15 or 18 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Queue_ID_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Routed_By__c, &apos;Queue ID&apos;), NOT(ISBLANK(Routed_To__c)), LEN(Routed_To__c) != 15, LEN(Routed_To__c) != 18)</errorConditionFormula>
        <errorDisplayField>Routed_To__c</errorDisplayField>
        <errorMessage>When routing by Queue ID, the routed to ID must be either exactly 15 or 18 characters long.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_User_ID_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Routed_By__c, &apos;User ID&apos;), NOT(ISBLANK(Routed_To__c)), LEN(Routed_To__c) != 15, LEN(Routed_To__c) != 18)</errorConditionFormula>
        <errorDisplayField>Routed_To__c</errorDisplayField>
        <errorMessage>When routing by User ID, the routed to ID must be either exactly 15 or 18 characters long.</errorMessage>
    </validationRules>
</CustomObject>